ubiquity (2.11.34) UNRELEASED; urgency=low

  * bin/ubiquity-dm: Drop atk-bridge GTK_MODULE as this is now part of
    GTK+ 3.5.
  * bin/ubiquity-dm: Add overlay-scrollbar GTK_MODULE as this is now a
    module. (LP: #1052040)

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Mon, 17 Sep 2012 23:43:29 +0100

ubiquity (2.11.33) quantal; urgency=low

  [ Dmitrijs Ledkovs ]
  * Make Add/Remove/Change toolbar not have a background. Thanks to
    askubuntu and andrewsomething.
  * Fix TypeError in a debug statement when resize is not possible due to
    small total disk space.
  * Remove more of Python 2 support.  We are not going back to the __future__.
  * Use py3compile, instead of pycompile.

  [ Stéphane Graber ]
  * Fix drop_all_privileges to also set LOGNAME which is required by firefox
    to contact an existing instance. (LP: #446679)

  [ Colin Watson ]
  * Automatic update of included source packages: debian-installer-utils
    1.91ubuntu4 (LP: #1049535), flash-kernel 3.0~rc.4ubuntu23.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 14 Sep 2012 12:40:52 +0100

ubiquity (2.11.32) quantal; urgency=low

  [ Jeremy Bicha ]
  * Allow specifying a manual mount point in advanced partitioner
    (LP: #1047275).

  [ Dmitrijs Ledkovs ]
  * Revert test string, to a user friendly one as it is visible in the UI.
  * Automatic update of included source packages: base-installer
    1.122ubuntu11, partman-auto-lvm 45ubuntu3, tzsetup 1:0.26ubuntu12.
  * pep8 fixes in Riddell's code

  [ Colin Watson ]
  * Remove a couple of vestiges of migration-assistant.
  * Catch OverflowError as well as ValueError from datetime functions, for
    forward-compatibility with Python 3.3.
  * Use importlib rather than __import__.
  * Install fetch-url for apt-setup's local generator (LP: #1049535).

  [ Jonathan Riddell ]
  * ubiquity/plugins/ubi-partman.py and
    ubiquity/frontend/kde_components/PartAuto.py
   - add options for LUKS and LVM automatic partitioning to KDE frontend