@@ -4,6 +4,7 @@ ubiquity (2.11.34) UNRELEASED; urgency=low
     GTK+ 3.5.
   * bin/ubiquity-dm: Add overlay-scrollbar GTK_MODULE as this is now a
     module. (LP: #1052040)
+  * Add manual crypto partitioning (LP: #1042649)
 
  -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Mon, 17 Sep 2012 23:43:29 +0100
 
